# KLOE

./: .bash_history  .gitignore  CMakeLists.txt  CMakeLists.txt.dist  CPVAnalysis.cpp  Doxyfile  GM_2024-12-16.md  IMPLEMENTATION_SUMMARY.md  JOB_LIST_USAGE.md  KINFITTER_OPTIMIZATIONS.md  Makefile.test  OPTIMIZATION_FINAL_REPORT.md  OPTIMIZATION_STATUS.md  README.md  To-do_list.md  analysis.sh  clean.sh  commands.txt  compile_and_copy.sh  copy_libs.sh  corr_file.root  correction_factor.C  correction_factor.h  correction_factor_C.d  debug.txt  debug1.txt  efficiency.cpp  execute_analysis.sh  four_pi_cut_stats.md  full_analysis.C  full_analysis.h  full_analysis_C.d  histos.C  histos.h  histos1.C  histos_1.C  histos_1.h  job_v1_all_phys2_5000_inv_pb_001.txt  job_v26_all_phys_1_inv_pb_541.txt  load.C  (+15 more)
.git-rewrite/: backup-refs  commit  heads  message  revs
.github/: copilot-instructions.md
CPFit/: cp_fit.C  cp_fit_mc.C  cp_fit_tri.C  cpfit_main.cpp  data_fit_interference.C  makefile
CP_fit/: chain_init.C  cp_fit.C  cp_fit_C.d  cp_fit_mc.C  cp_fit_mc_tri.C  cp_fit_tri.C  interf_func_fitter.cpp  interference.cpp  interference.h  makefile  results_split_fit.csv  test  test.C  test_C.d  test_C_ACLiC_dict_rdict.pcm
EfficiencyAnalysis/: efficiency_func_dist.cpp  efficiency_main.cpp
Efficiency_analysis/: chain_init.C  efficiency_func_dist.cpp  efficiency_plots.cpp
GeneratedVars/: cluster_pairing.cpp  gen_vars  generated_variables.cpp  genvars_main.cpp  makefile  split_channels.cpp
Generated_vars/: bunch_crossing.cpp  chain_init.C  clus_pair  gen_vars  generated_variables.cpp  genvars_make  mctruth.root  split_channels.cpp
IP_rec/: ip_reconstruction.cpp
Include/: ConfigManager.h  const.cpp  const.h  klspm00.hpp
Include/Codes/: CMakeLists.txt
Include/Codes/Old/: arrays_equality.h  constraints_omega.cpp  constraints_tri.cpp  constraints_tri.h  kin_fits_tri.cpp  kinematic_fits.cpp  kinematic_fits.h  lorentz_transf.cpp  lorentz_transf.h  rec.cpp
Include/Codes/examples/: HistManagerChi2Example.cpp  KaonMassReconstructorExample.cpp
Include/Codes/inc/: AnalysisManager.h  BRCorrectionFactors.h  ConfigManager.h  ConfigWatcher.h  ConstantsKeys.h  ConstraintsOmega.h  ConstraintsSignal.h  ConstraintsTest.h  ConstraintsTrilateration.h  CustomGraph.h  DataAccessWrapper.h  DataCutter.h  DoublGaussFitter.h  EfficiencyAnalysis.h  ErrorLogs.h  FileManager.h  GeneratedVariables.h  HistFactory.h  HistManager.h  HypothesisCodes.h  InputParamsHandler.h  KaonMassReconstructor.h  KinFit.h  KinFitter.h  Logger.h  Logs.h  MainMenu.h  MeasQualityGraph.h  MomentumSmearing.h  NeutralReconstruction.h  PdgApiClient.h  PdgManager.h  PdgSummaryEditionDataModel.h  PhysicsConstants.h  RealTimeIntegration.h  SplitFileWriter.h  StatisticalCutter.h  SystemPaths.h  TripleGaussFitter.h  TripleGaussUtils.h  (+22 more)
Include/Codes/src/: AnalysisManager.cpp  ConfigManager.cpp  ConfigWatcher.cpp  ConstraintsOmega.cpp  ConstraintsSignal.cpp  ConstraintsTest.cpp  ConstraintsTrilateration.cpp  CustomGraph.cpp  DataAccessWrapper.cpp  DataCutter.cpp  DoublGaussFitter.cpp  EfficiencyAnalysis.cpp  FileManager.cpp  GeneratedVariables.cpp  HistFactory.cpp  HistManager.cpp  KaonMassReconstructor.cpp  KinFitter.cpp  MeasQualityGraph.cpp  MomentumSmearing.cpp  NeutralReconstruction.cpp  PdgApiClient.cpp  PdgManager.cpp  PhysicsConstants.cpp  RealTimeIntegration.cpp  SplitFileWriter.cpp  StatisticalCutter.cpp  StatisticalCutter_Report.cpp  TripleGaussFitter.cpp  VariableConfig.cpp  bttf_interf.cpp  charged_mom.cpp  chi2_dist.cpp  clear_variables.cpp  closest_approach.cpp  const.cpp  cylinder_intersection.cpp  double_gaus.cpp  fraction_fitter.cpp  interf_function.cpp  (+12 more)
Include/FortranAnalysis/: CMakeLists.txt
Include/FortranAnalysis/inc/: fort_common.h  fort_func.h
Include/FortranAnalysis/src/: analysis_library.f  analysismodule.f  find_neuclu.cpp  fortran_to_cpp_linking.cpp  klspm00_lib.kloe
Include/FortranAnalysis/test/: fortran_to_cpp_linking.cpp
Interf_function/: interf_func_draw.cpp
Jupyter/: analysis.ipynb
KinFits/: load.C
Kin_fits/: kin_fits.C  kin_fits.h  klspm00.f  klspm00_lib.f  (+2 more)
Subanalysis/CovarianceMatrix/: CMakeLists.txt  covmatrix_main.cpp  makefile
Subanalysis/CovarianceMatrix/app/: covmatrix_main.cpp
Subanalysis/CovarianceMatrix/inc/: covmatrix.hpp
Subanalysis/CovarianceMatrix/src/: cov_matrix_determination.cpp  cov_matrix_determination_control_sample.cpp
Subanalysis/GeneratedVars/: CMakeLists.txt  genvars_main.cpp  makefile
Subanalysis/GeneratedVars/app/: genvars_main.cpp
Subanalysis/GeneratedVars/inc/: genvars.hpp
Subanalysis/GeneratedVars/src/: bunch_crossing.cpp  cluster_pairing.cpp  generated_variables.cpp  pipi_find.cpp  split_channels.cpp
Subanalysis/Neutrec/: CMakeLists.txt  makefile  neutrec_main.cpp  trilateration_kin_fit_function.cpp  trilateration_kin_fit_function.h
Subanalysis/Neutrec/app/: neutrec_main.cpp
Subanalysis/Neutrec/inc/: trilateration.hpp
Subanalysis/Neutrec/log/: NeutRecMain.err
Subanalysis/Neutrec/others/: chi2_func_tri.cpp  four_gamma_selection.cpp  six_gamma_selection.cpp  trilateration_neu_rec_kin_fit.cpp  trilateration_neu_rec_kin_fit_total.cpp
Subanalysis/Neutrec/src/: comp_of_methods.cpp  triangleRec.cpp  triangle_neu_rec.cpp  trilaterationKinFit.cpp  trilateration_neu_rec.cpp  trilateration_neu_rec_kin_fit.cpp  trilateration_neu_rec_kin_fit_aux.cpp  trilateration_neu_rec_kin_fit_total.cpp
Subanalysis/OmegaRec/: CMakeLists.txt  makefile  omegarec_main.cpp
Subanalysis/OmegaRec/app/: omegarec_main.cpp
Subanalysis/OmegaRec/backup/: omega_rec_kin_fit.cpp
Subanalysis/OmegaRec/inc/: omegarec.hpp
Subanalysis/OmegaRec/src/: omega_rec.cpp  omega_rec_kin_fit.cpp  plots.cpp  plots_df.cpp
examples/: CMakeLists.txt  README.md  desktop_app_basic  desktop_app_basic.cpp  desktop_app_demo  desktop_app_demo.cpp  desktop_app_qt.cpp  desktop_app_root.cpp
tests/: CMakeLists.txt  CMakeLists.txt.dist  KLOE_class_test.cpp  KaonMassReconstructor_test.cpp  LibRec_test.cpp  test_charged_vtx_rec.cpp
tests/KinematicFitTest/: a.out  dupa.sh  pi0pi0_kinfit.cpp
(+2084 files in other folders)
